[gd_scene load_steps=10 format=3 uid="uid://b24q0q78wlx5d"]

[ext_resource type="Script" uid="uid://bv8x8s4r04jea" path="res://script/hud.gd" id="1_4nxdm"]
[ext_resource type="Texture2D" uid="uid://ey3ldwxatay" path="res://sprite/HUD/Spr_TimerBar.png" id="2_5nt5s"]
[ext_resource type="FontFile" uid="uid://cigkq8qle8jkd" path="res://font/ari-w9500-condensed-display.ttf" id="4_73u6w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5nt5s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pvgpj"]
bg_color = Color(0.968627, 0.219608, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nhyt6"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_qxikp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.968627, 0.219608, 0.282353, 1)]
}

[sub_resource type="Animation" id="Animation_vgic2"]
resource_name = "timer_paused"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.516667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.968627, 0.219608, 0.282353, 1), Color(1, 1, 1, 1), Color(0.968627, 0.219608, 0.282353, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nja0l"]
_data = {
&"RESET": SubResource("Animation_qxikp"),
&"timer_paused": SubResource("Animation_vgic2")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4nxdm")
metadata/_edit_lock_ = true

[node name="Reference" type="ReferenceRect" parent="."]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
border_width = 2.0
metadata/_edit_lock_ = true

[node name="TimerBar" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -32.0
offset_right = -40.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("2_5nt5s")
expand_mode = 1

[node name="ProgressBar" type="ProgressBar" parent="TimerBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = 11.0
offset_right = -67.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_5nt5s")
theme_override_styles/fill = SubResource("StyleBoxFlat_pvgpj")
value = 100.0
show_percentage = false

[node name="DamageBar" type="ProgressBar" parent="TimerBar/ProgressBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_5nt5s")
theme_override_styles/fill = SubResource("StyleBoxFlat_nhyt6")
value = 100.0
show_percentage = false

[node name="TimeBarAnimationPlayer" type="AnimationPlayer" parent="TimerBar/ProgressBar"]
libraries = {
&"": SubResource("AnimationLibrary_nja0l")
}

[node name="RepeatAmount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -24.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_color = Color(0.941176, 0.941176, 0.85098, 1)
theme_override_fonts/font = ExtResource("4_73u6w")
text = "0"
vertical_alignment = 1
